--- a/src/python/scratch_two_layer.ipynb
+++ b/src/python/scratch_two_layer.ipynb
@@ -559,7 +559,7 @@
     }
    ],
    "source": [
-    "#set random state for cross model comparisson\n",
+    "#set random state for cross model comparison\n",
     "np.random.RandomState(seed = 7734)\n",
     "\n",
     "min_nodes = 10\n",
