--- a/R/scratch_conv.rmd
+++ b/R/scratch_conv.rmd
@@ -169,9 +169,9 @@ pad_kernel <- function(kern, img_dim) {
 
 kernel_conv_fft <- function(img, img_dims, padded_ft, dim_out, activation_func) {
   convolved <- fft(fft(img) * padded_ft, inverse = TRUE)
-  convolved_trunc <- as.numeric(
+  convolved_trunc <- suppressWarnings(as.numeric(
     convolved[dim_out[1]:img_dims[1], dim_out[2]:img_dims[2]]
-  )
+  ))
   activation_func(convolved_trunc)
 }
 
@@ -239,10 +239,13 @@ feature_maps_fft <- apply_kernel_conv(
 )
 tf <- Sys.time()
 print(tf - ti)
+```
+```{R echo=FALSE}
 show <- 30
+cat("Raw Image\n")
 image(train_dat[["imgs"]][, , show], col = gray((0:255) / 255))
+cat("image post kernel convolution in frequency domain\n")
 image(feature_maps_slow[, , show], col = gray((0:255) / 255))
-image(feature_maps_fft[, , show], col = gray((0:255) / 255))
 ```
 
 ### Pooling 
@@ -272,7 +275,6 @@ pooling_procedure <- function(img, filter_dim, feat_map_idx, dim_out, pooling_fu
 
 pooling_layer <- function(imgs, filter_dim, stride, pooling_func = max) {
 
-
   data_dim <- dim(imgs)
   dim_out <- ((data_dim[1] - filter_dim[1]) / stride) + 1
   pool_idx <- seq(1, data_dim[2] - filter_dim[2] + 1, by = stride)
@@ -290,7 +292,7 @@ pooling_layer <- function(imgs, filter_dim, stride, pooling_func = max) {
 }
 pool_stride = 2
 ti <- Sys.time()
-pooled_fft <- apply_pooling(feature_maps_fft, c(2, 2), pool_stride, pooling_func = max)
+pooled_fft <- pooling_layer(feature_maps_fft, c(2, 2), pool_stride, pooling_func = max)
 tf <- Sys.time()
 print(tf - ti)
 
