fixing image paths

--- a/Python/scratch_two_layer.ipynb
+++ b/Python/scratch_two_layer.ipynb
@@ -31,7 +31,7 @@
     "Forward propagation is the process of transforming our input data into our output data.   \n",
     "Forward propagation for our two layer neural network is imaged below.  \n",
     "\n",
-    "![forward_prop](../../data/imgs/2layer_forward_prop.svg)\n",
+    "![forward_prop](../data/imgs/2layer_forward_prop.svg)\n",
     "\n",
     "The input layer is simply a matrix of our raw training data.  \n",
     "Input Layer Definition:\n",
@@ -60,7 +60,7 @@
     "It works by finding the error in the weights, biases, and predictions working backward from the output layer. \n",
     "This process for our two layer neural network is imaged below.  \n",
     "\n",
-    "![back_prop](../../data/imgs/2layer_back_prop.svg)\n",
+    "![back_prop](../data/imgs/2layer_back_prop.svg)\n",
     "\n",
     "First step is to find the error of the output layer by subtracting the classes from our output layer matrix.  \n",
     "Y is the digit pictured in each image in the training set. Y is a one-hot encoded 10 by m matrix. \n",
